@@ -121,9 +121,20 @@ public final class BCrypt {
      * @return new verifier instance
      */
     public static Verifyer verifyer() {
-        return new Verifyer();
+        return verifyer(LongPasswordStrategies.none());
     }
 
+    /**
+     * Creates a new instance of bcrypt verifier to verify a password against a given hash.
+     * This verify also respects the passed {@link LongPasswordStrategy} for creating the reference hash - use this
+     * if you use one while hashing.
+     *
+     * @param longPasswordStrategy used to create the reference hash.
+     * @return new verifier instance
+     */
+    public static Verifyer verifyer(LongPasswordStrategy longPasswordStrategy) {
+        return new Verifyer(longPasswordStrategy);
+    }
     /**
      * Can create bcrypt hashes
      */
@@ -364,8 +375,10 @@ public final class BCrypt {
      */
     public static final class Verifyer {
         private final Charset defaultCharset = DEFAULT_CHARSET;
+        private final LongPasswordStrategy longPasswordStrategy;
 
-        private Verifyer() {
+        private Verifyer(LongPasswordStrategy longPasswordStrategy) {
+            this.longPasswordStrategy = longPasswordStrategy;
         }
 
         /**
@@ -548,7 +561,7 @@ public final class BCrypt {
             Objects.requireNonNull(rawBcryptHash23Bytes);
             Objects.requireNonNull(salt);
 
-            HashData hashData = BCrypt.withDefaults().hashRaw(cost, salt, password);
+            HashData hashData = BCrypt.with(longPasswordStrategy).hashRaw(cost, salt, password);
             return new Result(hashData, Bytes.wrap(hashData.rawHash).equalsConstantTime(rawBcryptHash23Bytes));
         }
     }
